fix line overflow

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,6 @@ body {
 
   word-wrap: break-word;
   line-break: anywhere;
-  overflow: hidden;
 }
 
 .terminal-leader {
